Layout (Font) fixes
Fixed the layout.css not implementing the correct path to the tf2 font.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <p class="gen-btn">Generate!</p>
     </div>
 
-    <div class="vwsrc-btn" onclick="location.reload()">
+    <div class="vwsrc-btn" onclick="location.href='https://github.com/beyluta/TeamFortress2StatsGenerator'">
         <p class="src-btn">View Source</p>
     </div>
 </body>
