Spelling and Javascript fixes
Fixed spelling mistakes and updated the GenerateStats() to skip duplicate entries.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p class="hd-cd">Created by SteamUser: <span onclick="location.href='https://steamcommunity.com/id/beyluta/'"><u>Beyluta</u></span></p>
     </div>
 
-    <p class="nitem">NEW ITEM AQUIRED!</p>
+    <p class="nitem">NEW ITEM ACQUIRED!</p>
     <p class="ditem">You <span style="color:#C74F37">Crafted</span>:</p>
     <div class="bpbk-div">
         <div class="item-exmp-div">
